fixed error with decimal spacing in font

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -5,5 +5,5 @@ body {
 
 @font-face {
   font-family: 'digital7';
-  src: url('../fonts/digital7/Digital7-rg1mL.ttf');
+  src: url('../fonts/digital7/Digital-7.ttf');
 }
